vendor/pin-project/tests/ui/unstable-features/negative_impls.stderr
error[E0119]: conflicting implementations of trait `Unpin` for type `Foo<MyPhantomPinned, ()>`
  --> tests/ui/unstable-features/negative_impls.rs:8:1
   |
8  | #[pin_project::pin_project]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo<MyPhantomPinned, ()>`
...
17 | impl Unpin for Foo<MyPhantomPinned, ()> {}
   | --------------------------------------- first implementation here
   |
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
